GalleryManager-SangND: add navigation

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Android_GalleryManager">
         <activity
-            android:name=".activity.SplashScreenActivity"
-            android:theme="@style/Theme.MaterialComponents.Light.NoActionBar">
+            android:name=".activity.SplashScreenActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
